--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="box">
+      <div id="box">
         <h1>Já tá podendo?</h1>
         <div class="iconDiv">
           <i id="icon" class="fi fi-rr-home"></i>
