--- a/index.html
+++ b/index.html
@@ -3,35 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
-    />
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Já tá podendo?</title>
   </head>
-  <body>
-    <div class="main">
-      <div id="box">
-        <h1>Já tá podendo?</h1>
-        <div class="iconDiv">
-          <i id="icon" class="fi fi-rr-home"></i>
-        </div>
-        <div class="result">
-          <p id="texto">TesteS</p>
-        </div>
-      </div>
+  <body class="d-flex justify-content-center align-items-center vh-100 bg-light" id="body">
+    <div class="container text-center p-5">
+      <main class="p-3 rounded">
+        <h1 class="display-1">Já tá podendo?</h1>
+        <p>
+          <i class="" id="icon"></i>
+        </p>
+        <p class="display-6" id="result"></p>
+        <p>
+          <div class="progress" role="progress-bar">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress"></div>
+          </div>
+        </p>
+        <p><a href="#" class="btn btn-lg" id="share" onclick="compartilhar()">Compartilhar</a></p>
+      </main>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
